app/assets/stylesheets/main.scss
.listing-div {
  margin-left: 4%;
  margin-right: 4%;
}

.badge{
  margin-left: 3%;
}

.glyphicon-bed {
  font-size: 125%;
  color: #4990E2;
}

#pad {
  font-weight: bold;
  color: #4990E2;
}

// Search Bars
.no-border {
  border: 0;
  outline: 0px;
}

.search-table {
  margin: 0 auto;
  padding: 10%;
  width: 100%;
}

.search-header th {
  font-weight: normal;
  font-size: 16px;
}

.search-body input{
  font-weight: lighter;;
  font-size: 20px;
}

.table-border {
  border: 1px;
}

#guest-select {
  width: 80px;
}

#search-button {
  margin-left: 20%;
}

.div-inline {
  display: inline-block;
}

#checkin, #checkout {
  width: 120px;
}

.search-span {
  margin-right: 6%;
}

tr.top-row th {
  border-top: thin solid;
  padding: 1.5% 1.5% 0% 1.5%;
  border-color: #979797;
}

tr.bottom-row th {
  border-bottom: thin solid;
  padding: 1% 1.5% 1% 1.5%;
  border-color: #979797;
}

tr.top-row th,
tr.bottom-row th {
  border-left: thin solid gray;
  border-right: thin solid gray;
}

.search-bar-div {
  padding-top: 5%;
  padding-bottom: 6%;
}


//Carousel
.item {
  &.city{
    background: image-url('city.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
  }
  &.water{
    background: image-url('water.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
  }
  &.bridge{
    background: image-url('bridge.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
  }
  &.cabin{
    background: image-url('cabin.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
  }
  width: 100%;
  height: 70vh;
  margin-top: -10vh;
  p {
    color: white;
    font-size: 40px;
    text-align: center;
    line-height: 80vh;
  }
}

// Profile Dashboard
.navbar-profile .navbar-ul {
    display: inline-block;
    float: none;
}

.navbar-profile .navbar-inner {
    text-align: center;
}

.navbar-profile {
  margin: 50px;
}

.navbar-profile ul {
  overflow: auto;
  list-style-type: none;
}

.navbar-profile li {
  height: 25px;
  float: left;
  margin-right: 0px;
  border-right: 1px solid #aaa;
  padding: 0 20px;
}

 .navbar-profileli:last-child {
  border-right: none;
}

.navbar-profile li a {
  text-decoration: none;
  color: #ccc;
  font: 25px/1 Helvetica, Verdana, sans-serif;
  text-transform: uppercase;

  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  -ms-transition: all 0.5s ease;
  transition: all 0.5s ease;
}

.navbar-profile li a:hover {
  color: #666;
}

.navbar-profile li.active a {
  font-weight: bold;
  color: #333;
}

// forms
$page-bg: #282F32;
$light-blue: #3599FF;
$bright-blue: #68B3FF;
$light-gray: #999;
//$curve: cubic-bezier(0, 0, 0.52, 1.11);
$curve: linear;

.form{
  width: 400px;
  margin: 0 auto;
  text-align: left;
  margin-top: 10em;

  label{
    display: block;
    text-align: left;
    color: black;
    font-size: .875em;
  }

  form {
    .text-input{
      overflow: hidden;
       margin-bottom: .875em;
    }

    input[type="text"],
    input[type="password"]{
      width: 100%;
      padding: 1em 0 12px;
      padding-left: 0;
      background: none;
      color: black;
      font-size: 1.2em;
      font-weight: 400;
      border: none;
      border-bottom: 1px solid $light-gray;

      &:focus + .separator {
       transform: scaleX(1) translateY(-2px);
         opacity: 1;
      }
    }

    input[type="submit"]{
      color: white;
      background: $light-blue;
      padding: 1em 1.4em;
      font-size: 1.2em;
      border:none;
      border-radius: 10px;
    }
  }
}

.separator {
  height:3px;
  width: 100%;
  background: $bright-blue;
  display: block;
  transform: scaleX(0) translateY(-2px);
  transform-origin: 50%;
  opacity: 0;
  transition: all .15s $curve;
}

* :focus {
  outline-color: transparent;
  outline-style: none;
}

body {
  font-family: Roboto;

  a {
    color: $light-blue;
    font-size: 1em;
    text-decoration: none;
  }
}

.form-bottom{
  margin-top:1.25em;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.account-header {
  text-align: center;
}

.text-input label {
  font-size: 20px;
  font-weight: normal;
}

.form {
  margin-top: 0;
}

.account-header {
  margin-bottom: 3%;
}

.button-center {
  text-align: center;
  &.update-btn{
    position: absolute;
    top: 50%;
  }
}

.full-width {
  width: 100%;
  margin-top: 0;
}

.no-padding {
  padding: 0;
  margin: 0;
}

// featured
.featured {
  margin-top: 6%;
  margin-bottom: 6%;
}

.featured-price {
  font-weight: bold;
  margin-right: 2%;
}
.pinline {
  text-align: center;
  display: block;
  overflow: hidden;
  font-size: 4em;
  margin: 20px 0;
  font-family: 'Helvetica';
}

.pinline span {
    position: relative;
    display: inline-block;
    line-height: 1;

    &:before, &:after {
          content: "";
          position: absolute;
          top: 50%;
          height: 1px;
          background: #000;
          width: 200px;
        }

        &:before {
          left: 100%;
          margin-left: 20px; }

        &:after {
          right: 100%;
          margin-right: 20px; }
}
// Body
body {
  font-family: "Helvetica";
}

// map
html,
body {
	height: 100%;
	margin: 0;
	padding: 0;
}
#map {
	height: 60%;
}

